Correct word-wrap value on _tables.scss and _tables.styl

--- a/css/furtive.css
+++ b/css/furtive.css
@@ -1,7 +1,7 @@
 /**
  * furtive - A forward-thinking, CSS micro-framework. Minimal by design.
  * @author John Otander <johnotander@gmail.com> (http://johnotander.com/)
- * @version v2.2.0
+ * @version v2.2.1
  * @link https://github.com/johnotander/furtive
  * @license MIT
  */
@@ -773,5 +773,5 @@ table > thead {
 
 table th, table td {
   padding: 0.25rem;
-  word-wrap: none;
+  word-wrap: normal;
   line-height: 1; }
