--- a/stylus/_tables.styl
+++ b/stylus/_tables.styl
@@ -7,5 +7,5 @@ table > thead
 table th,
 table td
   padding: .25rem
-  word-wrap: none
+  word-wrap: normal
   line-height: 1
